--- a/404.html
+++ b/404.html
@@ -3,18 +3,17 @@
     <!--<< Header Area >>-->
     <head>
 
-       <!-- ========== Meta Tags ========== -->
+        <!-- ========== Meta Tags ========== -->
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="author" content="Sudhakar">
-        <meta name="description" content="The Entity Studios">
-
+        <meta name="description" content="The Entity Studios — also registered as The-Entity Ltd, The Entity OÜ, and Entity Studios Private Limited. AAA Veterans delivering elite game animation and production pipelines.">
 
         <!-- Open Graph Meta Tags -->
-         <meta property="og:locale" content="en_US">
+        <meta property="og:locale" content="en_US">
         <meta property="og:title" content="The Entity Studios">
-        <meta property="og:description" content="AAA Veterans delivering elite game animation and production pipelines.">
+        <meta property="og:description" content="AAA Veterans delivering elite game animation and production pipelines. Also known as The-Entity Ltd, The Entity OÜ, and Entity Studios Private Limited.">
         <meta property="og:image" content="https://the-entity.studio/assets/img/meta/og-image.avif">
         <meta property="og:url" content="https://the-entity.studio/">
         <meta property="og:type" content="website">
@@ -23,7 +22,7 @@
         <!-- Twitter Card Meta Tags -->
         <meta name="twitter:card" content="summary_large_image">
         <meta name="twitter:title" content="The Entity Studios">
-        <meta name="twitter:description" content="AAA Veterans delivering elite game animation and production pipelines.">
+        <meta name="twitter:description" content="AAA Veterans delivering elite game animation and production pipelines. Also known as The-Entity Ltd, The Entity OÜ, and Entity Studios Private Limited.">
         <meta name="twitter:image" content="https://the-entity.studio/assets/img/meta/og-image.avif">
 
 
@@ -809,7 +808,7 @@
             <li><a href="company.html">About us</a></li>
             <li><a href="services.html">Services</a></li>
             <li><a href="projects.html">Projects</a></li>
-            <li><a href="coming-soon.html">Careers</a></li>
+            <li><a href="coming-soon.html" target="_blank" >Careers</a></li>
             <li><a href="contact.html">Contact us</a></li>
         </ul>
         <div class="social-icons d-flex justify-content-end justify-content-md-end justify-content-center gap-3">
