--- a/contact.html
+++ b/contact.html
@@ -3,18 +3,17 @@
     <!--<< Header Area >>-->
     <head>
 
-       <!-- ========== Meta Tags ========== -->
+        <!-- ========== Meta Tags ========== -->
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="author" content="Sudhakar">
-        <meta name="description" content="The Entity Studios">
-
+        <meta name="description" content="The Entity Studios — also registered as The-Entity Ltd, The Entity OÜ, and Entity Studios Private Limited. AAA Veterans delivering elite game animation and production pipelines.">
 
         <!-- Open Graph Meta Tags -->
-         <meta property="og:locale" content="en_US">
+        <meta property="og:locale" content="en_US">
         <meta property="og:title" content="The Entity Studios">
-        <meta property="og:description" content="AAA Veterans delivering elite game animation and production pipelines.">
+        <meta property="og:description" content="AAA Veterans delivering elite game animation and production pipelines. Also known as The-Entity Ltd, The Entity OÜ, and Entity Studios Private Limited.">
         <meta property="og:image" content="https://the-entity.studio/assets/img/meta/og-image.avif">
         <meta property="og:url" content="https://the-entity.studio/">
         <meta property="og:type" content="website">
@@ -23,7 +22,7 @@
         <!-- Twitter Card Meta Tags -->
         <meta name="twitter:card" content="summary_large_image">
         <meta name="twitter:title" content="The Entity Studios">
-        <meta name="twitter:description" content="AAA Veterans delivering elite game animation and production pipelines.">
+        <meta name="twitter:description" content="AAA Veterans delivering elite game animation and production pipelines. Also known as The-Entity Ltd, The Entity OÜ, and Entity Studios Private Limited.">
         <meta name="twitter:image" content="https://the-entity.studio/assets/img/meta/og-image.avif">
 
 
@@ -619,17 +618,17 @@ At The Entity Studios, we’re not just vendors, we’re creative partners. Whet
           </div>
         </div>
                                 <div class="col-lg-4">
-                            <div class="gt-contact-bg bg-cover" style="background-image: url(assets/img/inner-page/match-details/bg.avif); text-transform: none;">
+                            <div class="gt-contact-bg bg-cover" style="line-height: 50px; background-image: url(assets/img/inner-page/match-details/bg.avif); text-transform: none;">
                                 <div class="gt-contact-content">
-                                    <!-- <h3>Let’s Build Together</h3> -->
-                                    <p>Typical response time: within 1 business day</p>
+                                    <h3 style="color: red;">One Message Away</h3>
+                                    <h4>Let us know how we can support your production, from early ideas to in-engine delivery.</h4>
+                                    <p style="color: grey;">Typical response time: within 1 business day</p>
 
                                     <div class="gt-contact-item">
                                         <div class="gt-icon">
                                             <i class="fa-regular fa-envelope"></i>
                                         </div>
                                         <ul class="gt-list">
-                                            <li><span>Mail Us</span></li>
                                             <li><a href="contact@entity.ltd">
                                                 contact@entity.ltd
                                             </a></li>
@@ -640,10 +639,11 @@ At The Entity Studios, we’re not just vendors, we’re creative partners. Whet
                                             <i class="fa-solid fa-location-dot"></i>
                                         </div>
                                         <ul class="gt-list">
-                                            <li><span>Location:</span></li>
                                             <li>UK, EU, India</li>
                                         </ul>
                                     </div>
+                                    <h4 class="py-3">Our team will get back to you shortly with the info you need.</h4>
+                                    <h6>Help Us Help You (or)  Questions, ideas, or briefs, we’re all ears. </h6>
                                 </div>
                             </div>
       </div>
@@ -976,7 +976,7 @@ At The Entity Studios, we’re not just vendors, we’re creative partners. Whet
             <li><a href="company.html">About us</a></li>
             <li><a href="services.html">Services</a></li>
             <li><a href="projects.html">Projects</a></li>
-            <li><a href="coming-soon.html">Careers</a></li>
+            <li><a href="coming-soon.html" target="_blank" >Careers</a></li>
             <li><a href="contact.html">Contact us</a></li>
         </ul>
         <div class="social-icons d-flex justify-content-end justify-content-md-end justify-content-center gap-3">
