--- a/projects.html
+++ b/projects.html
@@ -3,18 +3,17 @@
     <!--<< Header Area >>-->
     <head>
 
-       <!-- ========== Meta Tags ========== -->
+        <!-- ========== Meta Tags ========== -->
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="author" content="Sudhakar">
-        <meta name="description" content="The Entity Studios">
-
+        <meta name="description" content="The Entity Studios — also registered as The-Entity Ltd, The Entity OÜ, and Entity Studios Private Limited. AAA Veterans delivering elite game animation and production pipelines.">
 
         <!-- Open Graph Meta Tags -->
-         <meta property="og:locale" content="en_US">
+        <meta property="og:locale" content="en_US">
         <meta property="og:title" content="The Entity Studios">
-        <meta property="og:description" content="AAA Veterans delivering elite game animation and production pipelines.">
+        <meta property="og:description" content="AAA Veterans delivering elite game animation and production pipelines. Also known as The-Entity Ltd, The Entity OÜ, and Entity Studios Private Limited.">
         <meta property="og:image" content="https://the-entity.studio/assets/img/meta/og-image.avif">
         <meta property="og:url" content="https://the-entity.studio/">
         <meta property="og:type" content="website">
@@ -23,9 +22,8 @@
         <!-- Twitter Card Meta Tags -->
         <meta name="twitter:card" content="summary_large_image">
         <meta name="twitter:title" content="The Entity Studios">
-        <meta name="twitter:description" content="AAA Veterans delivering elite game animation and production pipelines.">
+        <meta name="twitter:description" content="AAA Veterans delivering elite game animation and production pipelines. Also known as The-Entity Ltd, The Entity OÜ, and Entity Studios Private Limited.">
         <meta name="twitter:image" content="https://the-entity.studio/assets/img/meta/og-image.avif">
-
 
         <!-- ======== Page title ============ -->
         <title>The Entity Studios</title>
@@ -921,7 +919,64 @@
 </section>
 
 
+<section class="gaming-hero-section">
+  <div class="gaming-overlay d-flex flex-column justify-content-center align-items-center text-center position-relative">
+    
+    <!-- Centered Text Content -->
+    <div class="text-white p-5">
+      <h2 class="display-5 fw-bold" style="color: red;">Your Vision, Our Craft</h2>
+      <p class="lead">Have a project in mind? We’re here to collaborate and bring it to life. Big or small, every great project starts with a conversation.</p>
+      <a href="contact.html" class="btn gt-theme-btn btn-lg mt-4">Let's Connect</a>
+    </div>
 
+    <!-- Left Rotated Image -->
+    <img src="assets/img/hammer.png" alt="Left Image" class="side-image left-image">
+
+    <!-- Right Image -->
+    <img src="assets/img/home-1/testimonial/shape.png" alt="Right Image" class="side-image right-image">
+
+  </div>
+</section>
+
+<style>
+.gaming-hero-section {
+  background-image: url('assets/img/home-2/cta/cta-bg2.jpg');
+  background-size: 100% 100%; /* force-fit background to section */
+  background-position: bottom center;
+  background-repeat: no-repeat;
+  width: 100%;
+  min-height: auto;
+  height: auto;
+  position: relative;
+  overflow: hidden;
+  margin: 0;  /* remove potential outside spacing */
+  padding: 0; /* remove inside spacing */
+}
+
+.gaming-overlay {
+  width: 100%;
+  height: 100%;
+  padding: 2rem;
+  box-sizing: border-box;
+}
+
+
+.side-image {
+  position: absolute;
+  max-height: 300px;
+  height: auto;
+}
+
+.left-image {
+  left: 0;
+  bottom: 0;
+}
+
+.right-image {
+  right: 0;
+  bottom: 0;
+}
+</style>
 
 
 <!-- GT Contact Section Start -->
@@ -1352,7 +1407,7 @@
             <li><a href="company.html">About us</a></li>
             <li><a href="services.html">Services</a></li>
             <li><a href="projects.html">Projects</a></li>
-            <li><a href="coming-soon.html">Careers</a></li>
+            <li><a href="coming-soon.html" target="_blank" >Careers</a></li>
             <li><a href="contact.html">Contact us</a></li>
         </ul>
         <div class="social-icons d-flex justify-content-end justify-content-md-end justify-content-center gap-3">
