--- a/contact.html
+++ b/contact.html
@@ -545,7 +545,7 @@ At The Entity Studios, we’re not just vendors, we’re creative partners. Whet
         <!-- Left Side: Form -->
         <div class="col-lg-8">
           <div class="gt-comment-form-wrap">
-            <h4 style="line-height: 80px;">We're Here to Help!</h4>
+            <h4 style="line-height: 80px;">Questions, ideas, or briefs, we’re all ears.</h4>
 
             <form id="contact-form" autocomplete="off">
               <div class="row g-4">
@@ -622,7 +622,6 @@ At The Entity Studios, we’re not just vendors, we’re creative partners. Whet
                                 <div class="gt-contact-content">
                                     <h3 style="color: red;">One Message Away</h3>
                                     <h4>Let us know how we can support your production, from early ideas to in-engine delivery.</h4>
-                                    <p style="color: grey;">Typical response time: within 1 business day</p>
 
                                     <div class="gt-contact-item">
                                         <div class="gt-icon">
@@ -643,7 +642,7 @@ At The Entity Studios, we’re not just vendors, we’re creative partners. Whet
                                         </ul>
                                     </div>
                                     <h4 class="py-3">Our team will get back to you shortly with the info you need.</h4>
-                                    <h6>Help Us Help You (or)  Questions, ideas, or briefs, we’re all ears. </h6>
+                                    <h6> </h6>
                                 </div>
                             </div>
       </div>
