--- a/projects.html
+++ b/projects.html
@@ -1340,18 +1340,22 @@
         <div class="logo-carousel-wrapper">
             <div class="logo-track" id="logoTrack2">
           <!-- Initial Logos -->
-          <div loading="lazy" class="logo-item"><img src="assets/img/home-1/icon/icon-11.png" alt="Logo 2"></div>
-          <div loading="lazy" class="logo-item"><img src="assets/img/home-1/icon/icon-12.png" alt="Logo 3"></div>
-          <div loading="lazy" class="logo-item"><img src="assets/img/home-1/icon/icon-13.png" alt="Logo 4"></div>
-          <div loading="lazy" class="logo-item"><img src="assets/img/home-1/icon/icon-14.png" alt="Logo 5"></div>
-          <div loading="lazy" class="logo-item"><img src="assets/img/home-1/icon/icon-15.png" alt="Logo 6"></div>
-          <div loading="lazy" class="logo-item"><img src="assets/img/home-1/icon/icon-10.png" alt="Logo 1"></div>
-          <div loading="lazy" class="logo-item"><img src="assets/img/home-1/icon/icon-11.png" alt="Logo 2"></div>
-          <div loading="lazy" class="logo-item"><img src="assets/img/home-1/icon/icon-10.png" alt="Logo 1"></div>
-          <div loading="lazy" class="logo-item"><img src="assets/img/home-1/icon/icon-12.png" alt="Logo 3"></div>
-          <div loading="lazy" class="logo-item"><img src="assets/img/home-1/icon/icon-13.png" alt="Logo 4"></div>
-          <div loading="lazy" class="logo-item"><img src="assets/img/home-1/icon/icon-14.png" alt="Logo 5"></div>
-          <div loading="lazy" class="logo-item"><img src="assets/img/home-1/icon/icon-15.png" alt="Logo 6"></div>
+          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (1).png" alt="Logo 1"></div>
+          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (2).png" alt="Logo 2"></div>
+          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (3).png" alt="Logo 3"></div>
+          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (4).png" alt="Logo 4"></div>
+          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (5).png" alt="Logo 5"></div>
+          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (6).png" alt="Logo 6"></div>
+          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (7).png" alt="Logo 7"></div>
+          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (8).png" alt="Logo 8"></div>
+          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (9).png" alt="Logo 9"></div>
+          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (10).png" alt="Logo 10"></div>
+          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (11).png" alt="Logo 11"></div>
+          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (12).png" alt="Logo 12"></div>
+          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (13).png" alt="Logo 13"></div>
+          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (14).png" alt="Logo 14"></div>
+          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (15).png" alt="Logo 15"></div>
+          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (16).png" alt="Logo 16"></div>
 
 
             </div>
