--- a/company.html
+++ b/company.html
@@ -927,10 +927,10 @@
     </div>
 
     <!-- Left Rotated Image -->
-    <img src="assets/img/hammer.png" alt="Left Image" class="side-image left-image">
+    <img src="assets/img/hammer.png" alt="Left Image" class="side-image left-image hide-on-small">
 
     <!-- Right Image -->
-    <img src="assets/img/home-1/testimonial/shape.png" alt="Right Image" class="side-image right-image">
+    <img src="assets/img/home-1/testimonial/shape.png" alt="Right Image" class="side-image right-image hide-on-small">
 
   </div>
 </section>
