--- a/services.html
+++ b/services.html
@@ -1383,16 +1383,16 @@
 
   /* Section-specific background images */
   .service-section.img-1 {
-    background-image: url('assets/img/home-1/service/img-1.jpg');
+    background-image: url('assets/img/home-1/service/img-2.png');
   }
   .service-section.img-2 {
-    background-image: url('assets/img/home-1/service/img-2.jpg');
+    background-image: url('assets/img/home-1/service/img-2.png');
   }
   .service-section.img-3 {
-    background-image: url('assets/img/home-1/service/img-3.jpg');
+    background-image: url('assets/img/home-1/service/img-2.png');
   }
   .service-section.img-4 {
-    background-image: url('assets/img/home-1/service/img-4.jpg');
+    background-image: url('assets/img/home-1/service/img-2.png');
   }
 
   /* Headings inside each service card */
@@ -1409,6 +1409,7 @@
     line-height: 1.6;
     text-transform: none;
     text-align-last: left;
+    padding-bottom: 20px;
     text-shadow: 4px 4px 6px rgba(0, 0, 0, 0.6);
   }
 
@@ -1605,10 +1606,10 @@
     </div>
 
     <!-- Left Rotated Image -->
-    <img src="assets/img/hammer.png" alt="Left Image" class="side-image left-image">
+    <img src="assets/img/hammer.png" alt="Left Image" class="side-image left-image hide-on-small">
 
     <!-- Right Image -->
-    <img src="assets/img/home-1/testimonial/shape.png" alt="Right Image" class="side-image right-image">
+    <img src="assets/img/home-1/testimonial/shape.png" alt="Right Image" class="side-image right-image hide-on-small">
 
   </div>
 </section>
