--- a/company.html
+++ b/company.html
@@ -948,6 +948,8 @@
   overflow: hidden;
   margin: 0;  /* remove potential outside spacing */
   padding: 0; /* remove inside spacing */
+    z-index: -30;
+
 }
 
 .gaming-overlay {
@@ -967,11 +969,15 @@
 .left-image {
   left: 0;
   bottom: 0;
+      z-index: -10;
+
 }
 
 .right-image {
   right: 0;
   bottom: 0;
+      z-index: -10;
+
 }
 </style>
 
