--- a/projects.html
+++ b/projects.html
@@ -951,6 +951,8 @@
   overflow: hidden;
   margin: 0;  /* remove potential outside spacing */
   padding: 0; /* remove inside spacing */
+    z-index: -30;
+
 }
 
 .gaming-overlay {
@@ -970,11 +972,16 @@
 .left-image {
   left: 0;
   bottom: 0;
+      z-index: -10;
+
+  
 }
 
 .right-image {
   right: 0;
   bottom: 0;
+      z-index: -10;
+
 }
 </style>
 
