--- a/home.html
+++ b/home.html
@@ -1076,6 +1076,8 @@
   overflow: hidden;
   margin: 0;  /* remove potential outside spacing */
   padding: 0; /* remove inside spacing */
+    z-index: -30;
+
 }
 
 .gaming-overlay {
@@ -1095,11 +1097,15 @@
 .left-image {
   left: 0;
   bottom: 0;
+      z-index: -10;
+
 }
 
 .right-image {
   right: 0;
   bottom: 0;
+      z-index: -10;
+
 }
 </style>
 
