--- a/services.html
+++ b/services.html
@@ -1540,51 +1540,60 @@
 
 
   <style>
-    /* ===== Logo Carousel Styles ===== */
-    .logo-carousel-wrapper {
-      overflow: hidden;
-      position: relative;
-      width: 100%;
-      max-width: 100vw;
-      background-color: #0a0a0a00; /* Dark background for contrast */
-    }
+/* ===== Logo Carousel Styles ===== */
+.logo-carousel-wrapper {
+  overflow: hidden;
+  position: relative;
+  width: 100%;
+  max-width: 100vw;
+  background-color: #0a0a0a00;
+}
 
-    .logo-track {
-      display: flex;
-      width: max-content;
-      animation: scroll-left 90s linear infinite;
-    }
+.logo-track {
+  display: flex;
+  min-width: 200%;
+  will-change: transform;
+}
 
-    .logo-item {
-      max-height: 120px;
-      width: auto;
-      height: 120px;
-      flex: 0 0 auto;
-      padding: 0 40px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    }
+/* Animations */
+@keyframes scroll-left-fast {
+  0% { transform: translate3d(0, 0, 0); }
+  100% { transform: translate3d(-50%, 0, 0); }
+}
 
-    .logo-item img {
-      max-height: 180px;
-      width: auto;
-      filter: grayscale(100%);
-      transition: filter 0.3s ease-in-out;
-    }
+@keyframes scroll-left-slow {
+  0% { transform: translate3d(0, 0, 0); }
+  100% { transform: translate3d(-50%, 0, 0); }
+}
 
-    .logo-item img:hover {
-      filter: grayscale(0%);
-    }
+/* Assign different animations */
+#logoTrack {
+  animation: scroll-left-fast 30s linear infinite;
+}
 
-    @keyframes scroll-left {
-      0% {
-        transform: translateX(0);
-      }
-      100% {
-        transform: translateX(-50%);
-      }
-    }
+#logoTrack2 {
+  animation: scroll-left-slow 50s linear infinite;
+}
+
+.logo-item {
+  max-height: 120px;
+  height: 120px;
+  padding: 0 40px;
+  flex: 0 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.logo-item img {
+  max-height: 180px;
+  filter: grayscale(100%);
+  transition: filter 0.3s ease-in-out;
+}
+
+.logo-item img:hover {
+  filter: grayscale(0%);
+}
   </style>
 
 <!-- GT Commitment Section Start -->
