--- a/company.html
+++ b/company.html
@@ -555,9 +555,9 @@
 
                                   <article class="gt-about-text top_view_2 item-hover">
                                     <p class="text-center lead mb-5">
-                                      Established in 2024, The Entity Studios was created to blend the precision of high-end animation pipelines<br>
-                                      with the flexibility and security of global delivery. Our leadership team brings decades of experience<br>
-                                      from some of the industry’s most iconic game titles. We partner with studios that demand reliable,<br>
+                                      Established in 2024, The Entity Studios was created to blend the precision of high-end animation pipelines
+                                      with the flexibility and security of global delivery. Our leadership team brings decades of experience
+                                      from some of the industry’s most iconic game titles. We partner with studios that demand reliable,
                                       specialized animation teams integrated seamlessly into their production workflows.
                                     </p>
                                   </article>
