--- a/services.html
+++ b/services.html
@@ -794,7 +794,7 @@
 
 
        <!-- GT News Section Start -->
-       <section class="gt-news-section section-padding fix">
+       <section class="hide-on-small hide-mobile gt-news-section section-padding fix">
             <div class="container">
 
                 <div class="row" style="justify-content: center;">
@@ -828,7 +828,40 @@
             </div>
        </section>
 
+       <!-- GT News Section Start -->
+       <section class="hide-desktop gt-news-section section-padding fix">
+            <div class="container">
 
+                <div class="row" style="justify-content: center;">
+                    <div class="col-xl-4 col-lg-6 col-md-6 item_right_1">
+                        <div class="gt-news-card-item">
+                            <div class="gt-news-image">
+                                <a href="javascript:void(0);" class="icon scroll-to-mob-service1">
+                                <img src="assets/img/home-1/service/animationservice1.gif" alt="img">
+                            </div>
+                            <div class="gt-news-content text-center ">
+                                    <h3>Animation Solutions</h3>
+                                    <i class="fa-solid fa-arrow-right"></i>
+                                  </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xl-4 col-lg-6 col-md-6 item_left_1">
+                        <div class="gt-news-card-item">
+                            <div class="gt-news-image">
+                              <a href="javascript:void(0);" class="scroll-to-mob-service2">
+                                <img src="assets/img/home-1/service/animationservice2.gif" alt="img">
+                            </div>
+                            <div class="gt-news-content text-center">
+                                  <h3>Mocap Solutions</h3>
+                                  <i class="fa-solid fa-arrow-right"></i>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+       </section>
 
 <style>
 #services {
@@ -914,27 +947,28 @@
 
 #bg-image-replacement {
   position: absolute; /* or relative/fixed based on your layout */
-  top: -6%;
+  top: 0%;
   left: 50%;
   transform: translateX(-50%);
   width: 600px;
   height: 250px;
   z-index: -1;
   pointer-events: none;
-  object-fit: cover; /* Optional: helps ensure the image fills the area */
+  object-fit: fill; /* Optional: helps ensure the image fills the area */
 }
 
 
 #bg-image-replacement2 {
   position: absolute; /* or relative/fixed based on your layout */
-  top: -16%;
+  top: 0%;
   left: 50%;
   transform: translateX(-50%);
   width: 600px;
   height: 250px;
   z-index: -1;
   pointer-events: none;
-  object-fit: cover; /* Optional: helps ensure the image fills the area */
+  filter: hue-rotate(220deg);
+  object-fit: fill; /* Optional: helps ensure the image fills the area */
 }
 
 
@@ -1030,7 +1064,7 @@
   }
 
   .animated-word {
-    font-size: 3.4rem;
+    font-size: 2.4rem;
     display: block;
     margin-top: 8px;
   }
@@ -1047,7 +1081,7 @@
 
 
   <!-- Main container -->
-  <div class="container" style="max-width: 1200px; min-height: auto;">
+  <div class="container hide-mobile" style="max-width: 1200px; min-height: auto;">
     <div class="gt-team-wrapper position-relative">
 
       <!-- Lottie animation container (top) -->
@@ -1139,7 +1173,7 @@
 </section>
 
 
-<div class="text-center bg-black">
+<div class=" hide-mobile text-center bg-black">
   <a href="javascript:void(0);" class="custom-offset scroll-to-motion gt-theme-btn gt-style-border d-inline-block">Explore Motion Capture</a>
 </div>
 
@@ -1162,18 +1196,304 @@
 
 </style>
 
+
+
+  <style>
+    /* mobile-only */
+    @media (min-width: 576px) {
+      .mobile-only { display: none !important; }
+    }
+
+    body {
+      margin: 0; padding: 0;
+    }
+
+    .accordion-wrapper { padding: 1rem; }
+
+    .accordion-card {
+      border-radius: 10px;
+      overflow: hidden;
+      background: #1a1a1a;
+      transition: height 0.5s ease;
+      margin-bottom: 1rem;
+      position: relative;
+      height: 200px; /* initial collapsed height */
+    }
+
+    .accordion-card.open .accordion-title {
+      position: relative;
+      top: 0;
+      left: 0;
+      bottom: auto;
+      background: transparent;
+      padding: 1rem;
+      border-radius: 0;
+    }
+
+    .thumbnail {
+      width: 100%; height: 200px;
+      object-fit: cover;
+    }
+
+    .accordion-title {
+    position: absolute;
+    bottom: 1rem;
+    left: 1rem;
+    font-size: 1.3rem;
+    font-weight: bold;
+    color: #fff;
+    z-index: 3;
+    background: rgba(0, 0, 0, 0.5);
+    padding: 0.5rem 1rem;
+    border-radius: 8px;
+    max-width: 90%;
+    transition: all 0.5s ease;
+  }
+
+
+    .accordion-title span { color: red; }
+
+    .accordion-body {
+      padding: 1rem;
+      background: #1f1f1f;
+    }
+
+    .accordion-body ul {
+      margin: 0; padding-left: 1rem;
+    }
+
+    .accordion-body li {
+      padding: 0.4rem 0;
+      color: #fff;
+    }
+
+    .accordion-body li::before {
+      content: "• ";
+      margin-right: 0.5rem;
+      color: red;
+    }
+
+    .toggle-icon {
+      position: absolute;
+      top: 10px; right: 10px;
+      font-size: 1.4rem;
+      transition: transform 0.3s;
+    }
+
+    .accordion-card.open .toggle-icon {
+      transform: rotate(180deg);
+    }
+
+    button.accordion-btn {
+      all: unset;
+      display: block; width: 100%; height: 100%;
+      cursor: pointer;
+      position: relative;
+    }
+  </style>
+
+<!-- Motion Solutions Section Heading -->
+<div class="container-fluid mobile-only pt-4 pb-2 px-3 text-center">
+  <h4 class="text-white fw-bold mb-2 tz-itm-title tz-itm-anim" style="font-size: 1.4rem;">
+    <span class="color-red"> ANIMATION </span> SOLUTIONS
+  </h4>
+  <p class="tz-itm-title tz-itm-anim" style="font-size: 1rem; line-height: 1.5; color: #727272;">
+    From keyframe to engine-ready, our animations are crafted for expressive performance and seamless real-time integration, powering everything from gameplay to cinematics.
+  </p>
+</div>
+
+
+<div class="container-fluid mobile-only">
+  <div class="accordion-wrapper" id="accordion">
+
+    <!-- Card 1 -->
+    <div class="accordion-card" data-index="0" id="mob-service1">
+      <button class="accordion-btn" onclick="toggleCard(this)">
+        <img class="thumbnail" src="assets/img/breadcrumb.avif" alt="Rigging thumbnail">
+        <div class="toggle-icon">▼</div>
+
+        <div class="accordion-title">🛠️ Rigging & <span>Character setup</span></div>
+
+        <div class="accordion-body">
+          <ul>
+            <li>Custom skeleton creation tailored for game-ready characters.</li>
+            <li>Advanced deformation setup for natural and dynamic movement.</li>
+            <li>Facial rigging for expressive performances.</li>
+            <li>Modular rigs optimized for animation pipelines.</li>
+            <li>Physics-based rigging for cloth, hair, and props.</li>
+          </ul>
+        </div>
+      </button>
+    </div>
+
+    <!-- Card 2 -->
+    <div class="accordion-card" data-index="1">
+      <button class="accordion-btn" onclick="toggleCard(this)">
+        <img class="thumbnail" src="assets/img/breadcrumb.avif" alt="Integration thumbnail">
+        <div class="toggle-icon">▼</div>
+
+        <div class="accordion-title">⚙️ Technical <span>integration</span></div>
+
+        <div class="accordion-body">
+          <ul>
+            <li>Animation implementation and state machine setup.</li>
+            <li>Ik/fk blending and procedural animation workflows.</li>
+            <li>Retargeting and optimizing animation for game engines.</li>
+            <li>Blueprint and animation graph setup for seamless interactions.</li>
+            <li>Root motion and physics-based movement integration.</li>
+          </ul>
+        </div>
+      </button>
+    </div>
+
+    <!-- Card 3 -->
+    <div class="accordion-card" data-index="2">
+      <button class="accordion-btn" onclick="toggleCard(this)">
+        <img class="thumbnail" src="assets/img/breadcrumb.avif" alt="Animation thumbnail">
+        <div class="toggle-icon">▼</div>
+
+        <div class="accordion-title">🎬 Cinematic & <span>Gameplay animation</span></div>
+
+        <div class="accordion-body">
+          <ul>
+            <li>High‑quality keyframe and mocap‑driven animations.</li>
+            <li>Stylized and realistic animation styles tailored for your game.</li>
+            <li>Cinematic sequences for trailers, cutscenes, and storytelling.</li>
+            <li>Combat, locomotion, and interaction animations for immersive gameplay.</li>
+            <li>Polishing and refining animations for final implementation.</li>
+          </ul>
+        </div>
+      </button>
+    </div>
+
+  </div>
+</div>
+
+<script>
+  function toggleCard(el) {
+    const all = document.querySelectorAll('.accordion-card'),
+          card = el.closest('.accordion-card');
+
+    all.forEach(c => {
+      if (c !== card) {
+        c.classList.remove('open');
+        c.style.height = '200px';
+      }
+    });
+
+    const isOpen = card.classList.toggle('open');
+
+    if (isOpen) {
+      const body = card.querySelector('.accordion-body'),
+            title = card.querySelector('.accordion-title'),
+            thumbnail = card.querySelector('.thumbnail'),
+            fullHeight = thumbnail.offsetHeight + title.offsetHeight + body.scrollHeight + 20; 
+      card.style.height = fullHeight + 'px';
+    } else {
+      card.style.height = '200px';
+    }
+  }
+</script>
+
+<!-- Motion Solutions Section Heading -->
+<div class="container-fluid mobile-only pt-4 pb-2 px-3 text-center">
+  <h4 class="text-white fw-bold mb-2 tz-itm-title tz-itm-anim" id="mob-service2" style="font-size: 1.4rem;">
+    <span class="color-red"> MOCAP </span> SOLUTIONS
+  </h4>
+  <p class="tz-itm-title tz-itm-anim" style="font-size: 1rem; line-height: 1.5; color: #727272;">
+    From raw capture data to polished performance, our mocap solutions deliver clean, expressive animation, ready for seamless integration across gameplay, cinematics, and virtual production.
+  </p>
+</div>
+
+
+<!-- Motion Capture Accordion (Mobile Only) -->
+<div class="container-fluid mobile-only">
+  <div class="accordion-wrapper" id="motionCaptureAccordion">
+    
+
+    <!-- Card 1 -->
+    <div class="accordion-card" data-index="0">
+      <button class="accordion-btn" onclick="toggleCard(this)">
+        <img class="thumbnail" src="assets/img/breadcrumb.avif" alt="Motion capture thumbnail">
+        <div class="toggle-icon">▼</div>
+        <div class="accordion-title">🎯 Motion capture <span>cleanup & processing</span></div>
+        <div class="accordion-body">
+          <ul>
+            <li>High-precision marker data cleanup (optical & inertial).</li>
+            <li>Addressing jitter, occlusion, and marker swaps for flawless data.</li>
+            <li>Stringent quality control for accuracy and consistency.</li>
+          </ul>
+        </div>
+      </button>
+    </div>
+
+    <!-- Card 2 -->
+    <div class="accordion-card" data-index="1">
+      <button class="accordion-btn" onclick="toggleCard(this)">
+        <img class="thumbnail" src="assets/img/breadcrumb.avif" alt="Retargeting">
+        <div class="toggle-icon">▼</div>
+        <div class="accordion-title">🎯 Retargeting & <span>motion editing</span></div>
+        <div class="accordion-body">
+          <ul>
+            <li>Seamless retargeting of mocap data to various character rigs.</li>
+            <li>Motion refinement for natural and realistic movements.</li>
+            <li>Custom locomotion sets, loops, and transitions.</li>
+          </ul>
+        </div>
+      </button>
+    </div>
+
+    <!-- Card 3 -->
+    <div class="accordion-card" data-index="2">
+      <button class="accordion-btn" onclick="toggleCard(this)">
+        <img class="thumbnail" src="assets/img/breadcrumb.avif" alt="Facial motion capture">
+        <div class="toggle-icon">▼</div>
+        <div class="accordion-title">🎯 Facial motion <span>capture solutions</span></div>
+        <div class="accordion-body">
+          <ul>
+            <li>Facial data tracking and solving for expressive performances.</li>
+            <li>Retargeting and refining facial motion for cinematic and in-game use.</li>
+            <li>Enhanced realism through detailed facial animation processing.</li>
+            <li>Ensuring precise facial performance capture for lifelike character expressions.</li>
+          </ul>
+        </div>
+      </button>
+    </div>
+
+    <!-- Card 4 -->
+    <div class="accordion-card" data-index="3">
+      <button class="accordion-btn" onclick="toggleCard(this)">
+        <img class="thumbnail" src="assets/img/breadcrumb.avif" alt="Gameplay animation">
+        <div class="toggle-icon">▼</div>
+        <div class="accordion-title">🎯 Cinematic & <span>gameplay animation</span></div>
+        <div class="accordion-body">
+          <ul>
+            <li>Mocap-driven animation for in-game cinematics and cutscenes.</li>
+            <li>Custom gameplay animations (locomotion, interactions, action sequences).</li>
+            <li>Integration-ready animation tailored to game engines.</li>
+          </ul>
+        </div>
+      </button>
+    </div>
+
+  </div>
+</div>
+
+
+
+
 <!-- GT Team Section: Motion Capture Services -->
-<section id="motion" class="shake-horizontal onepad gt-service-section section-padding fix d-flex align-items-center justify-content-center">
+<section id="motion" class="shake-horizontal hide-mobile onepad gt-service-section section-padding fix d-flex align-items-center justify-content-center">
 
   <!-- Duplicate Lottie animation at the top -->
   <!-- <div id="lottie-top-animation-duplicate"></div> -->
-<img id="bg-image-replacement" src="assets/img/home-3/bgred.png" alt="redbg">
+<img id="bg-image-replacement" class="hide-mobile" src="assets/img/home-3/bgred.png" alt="redbg">
 
   <!-- ✅ Overlay paragraph -->
-  <p class="overlay-text2 tz-itm-title tz-itm-anim">From raw capture data to polished performance, our mocap solutions deliver clean, <br> expressive animation, ready for seamless integration across gameplay, cinematics, and virtual production.</p>
+  <p class="overlay-text2  hide-mobile tz-itm-title tz-itm-anim">From raw capture data to polished performance, our mocap solutions deliver clean, <br> expressive animation, ready for seamless integration across gameplay, cinematics, and virtual production.</p>
 
   <!-- Container for the content -->
-  <div class="container" style="max-width: 1200px;">
+  <div class="container  hide-mobile" style="max-width: 1200px;">
     <div class="gt-team-wrapper position-relative">
 
       <!-- Swiper Slider Wrapper -->
@@ -1273,11 +1593,18 @@
     </div> <!-- End .gt-team-wrapper -->
   </div> <!-- End .container -->
 
+  
 </section>
 
 <style>
+
 .onepad {
   padding-top: 50%;
+}
+
+.color-red {
+  color: red;
+  font-size: 3rem;
 }
 
 .overlay-text2 {
@@ -2440,6 +2767,35 @@ lottie.loadAnimation({
       });
     });
   });
+
+    // NEW scroll-to-mob1 button
+  document.querySelectorAll('.scroll-to-mob-service1').forEach(button => {
+    button.addEventListener('click', () => {
+      gsap.to(window, {
+        scrollTo: {
+          y: "#mob-service1",
+          offsetY: 100
+        },
+        duration: 1,
+        ease: "power2.out"
+      });
+    });
+  });
+
+      // NEW scroll-to-mob2 button
+  document.querySelectorAll('.scroll-to-mob-service2').forEach(button => {
+    button.addEventListener('click', () => {
+      gsap.to(window, {
+        scrollTo: {
+          y: "#mob-service2",
+          offsetY: 100
+        },
+        duration: 1,
+        ease: "power2.out"
+      });
+    });
+  });
+
 
     handleScroll(); // Initial check
     window.addEventListener("scroll", handleScroll);
